        Incorrect data type conversion
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>
  
    * Cleanup
        Command line switch L for SuperServer is no longer recognized as the old local protocol was deleted.
      Contributor(s):
        Dmitry Yemanov <yemanov at yandex.ru>

    * Security improvement
        Another layout of security.fdb
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Fixed unregistered bug
        Column-level privileges are preserved after this column is dropped
      Contributor(s):
        Dmitry Yemanov <yemanov at yandex.ru>

    * Fixed unregistered bug
        Memory leak when selectable stored procedures are called from PSQL or in subqueries
      Contributor(s):
        Nickolay Samofatov <nickolay at broadviewsoftware.com>

    * Index improvements
        Don't check uniqueness for null keys
      Contributor(s):
        Vlad Horsun <horsun at kdb.dp.ua>

    * SQL improvements
        1) Introduced SEQUENCE as a synonym for GENERATOR (as per SQL-99)
        2) Added SQL-99 compliant NEXT VALUE FOR <sequence_name> expression
        3) Implemented REVOKE ADMIN OPTION FROM statement
      See also:
        /doc/sql.extentions/README.sequence_generators
        /doc/sql.extentions/README.ddl.txt
      Contributor(s):
        Dmitry Yemanov <yemanov at yandex.ru>

    * Fixed unregistered bug
        Backup issues with stream BLOBs
      Contributor(s):
        Nickolay Samofatov <nickolay at broadviewsoftware.com>

    * Fixed unregistered bug
        Diagnostics about missing/unusable UDF module
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Optimizer improvements
        1) Distribute HAVING clause conjunctions to the WHERE clause when possible
        2) Distribute UNION conjunctions to the inner streams when possible
        3) Improved cross join and merge/sort handling
        4) Better optimization of mixed AND/OR predicates