@@ -31,7 +31,7 @@
 #   Contributor(s):
 #  
 # 
-#   $Id: install.sh.in,v 1.7 2004-04-27 12:35:52 brodsom Exp $
+#   $Id: install.sh.in,v 1.8 2005-03-05 01:43:39 robocop Exp $
 # 
 
 #  Install script for FirebirdSQL database engine
@@ -162,7 +162,7 @@ cp $BuiltFBDir/help/help.fdb $DestDir/help
 #cp -r $BuiltFBDir/doc $DestDir 
 
 cp $BuiltFBDir/firebird.msg $DestDir/firebird.msg 
-cp $BuiltFBDir/security.fdb $DestDir/security.fdb.sample
+cp $BuiltFBDir/security2.fdb $DestDir/security2.fdb.sample
 
 
 #cp $BuiltFBDir/include/gds.f $DestDir/include 
@@ -282,7 +282,7 @@ chmod ug=rw,o= help/*.fdb
 # install the samples if they don't exist
 [ -f aliases.conf ] || install -o firebird -g firebird -m 440 aliases.conf.sample aliases.conf
 [ -f firebird.conf ] || install -o firebird -g firebird -m 440 firebird.conf.sample firebird.conf
-[ -f security.fdb ] || install -o firebird -g firebird -m 660 security.fdb.sample security.fdb
+[ -f security2.fdb ] || install -o firebird -g firebird -m 660 security2.fdb.sample security2.fdb
 
 # remove any existing gds service
 cp /etc/services /etc/services.old
